--- a/templates/app/views/chaltron/users/_users.html.erb
+++ b/templates/app/views/chaltron/users/_users.html.erb
@@ -37,7 +37,7 @@
             <%= hidden_field_tag :sort_direction, sort_direction %>
             <%= hidden_field_tag :sort_column, sort_column %>
             <div class='input-group'>
-              <%= text_field_tag :search, params[:search],
+              <%= text_field_tag :search, filter_search,
                                  class: 'form-control', placeholder: t('.search') %>
               <button class='btn btn-primary' type='submit'>Cerca</button>
             </div>
