--- a/templates/app/views/chaltron/users/_users.html.erb
+++ b/templates/app/views/chaltron/users/_users.html.erb
@@ -61,7 +61,7 @@
           </div>
         </div>
         <%# Sort columns %>
-        <div class="ms-3">
+        <div class='ms-3'>
           <div id='sort' class='btn-group mb-3 float-end' role='group'>
             <div class='btn-group' role='group'>
               <button id='sort-column' type='button' class='btn btn-primary dropdown-toggle' data-bs-toggle='dropdown' aria-expanded='false'>
