--- a/templates/app/views/shared/_flash.html.erb
+++ b/templates/app/views/shared/_flash.html.erb
@@ -1,11 +1,11 @@
-<div id='flash'>
-  <%= tag.div class: 'flash-container',
-              data: {
-                controller: 'chaltron--remove',
-                action: 'click->chaltron--remove#remove'
-              } do %>
-    <% %i[error alert notice success].each do |m| %>
-      <%= flash_message(flash[m], m) unless flash[m].nil? %>
+<% flash.each do |type, message| %>
+    <%= tag.div message, class: "alert #{bootstrap_class_for(type)} rounded-0",
+                         data: {
+                           controller: 'chaltron--remove',
+                           action: 'click->chaltron--remove#remove'
+                         } do %>
+      <%= tag.strong I18n.t("chaltron.flash.#{type}") %>
+      <%= tag.strong ': ' %>
+      <%= tag.span message %>
     <% end %>
-  <% end %>
-</div>
+<% end %>
