--- a/templates/app/views/chaltron/users/_users.html.erb
+++ b/templates/app/views/chaltron/users/_users.html.erb
@@ -1,98 +1,80 @@
-<div id='users'>
-  <div class='row'>
-    <div class='col-md-3'>
-      <%# Provider filters %>
-      <% if ldap_enabled? %>
-      <div class='card mb-3'>
-        <div class='card-header'>
-          <%= t('.provider_filter') %>
-        </div>
-        <div class='list-group list-group-flush'>
-          <%= display_side_filter_link(request.params.merge(provider: 'ldap', page: nil),
-                                       filter_provider == 'ldap', t('.ldap'), @count_users_ldap) %>
-          <%= display_side_filter_link(request.params.merge(provider: 'local', page: nil),
-                                       filter_provider == 'local', t('.local'), @count_users_local) %>
+<div class='row'>
+  <div class='col-md-3' id='filters'>
+    <%= render 'filters', count_filters: count_filters %>
+  </div>
+  <div class='col-md-9'>
+    <div class='d-flex'>
+      <%# Search form %>
+      <div class='flex-grow-1'>
+        <%= form_tag chaltron_users_path, method: 'get', class: 'mb-3' do %>
+          <%= hidden_field_tag :sort_direction, sort_direction %>
+          <%= hidden_field_tag :sort_column, sort_column %>
+            <div class='input-group mb-3'>
+            <%= text_field_tag :search, filter_search,
+                                class: 'form-control', size: 50,
+                                placeholder: t('.search_placeholder') %>
+            <span class='input-group-text'>
+              <%= link_to icon(:fas, 'trash-alt'), chaltron_users_path(users_ssfp_params.merge(search: '', page: 1)),
+                          title: t('.reset_search'),
+                          data: {
+                            controller: 'chaltron--tooltip',
+                            bs_toggle: 'tooltip',
+                            bs_trigger: 'hover'
+                          } %>
+            </span>
+            <button class='btn btn-primary' type='submit'>Cerca</button>
+          </div>
+        <% end %>
+      </div>
+      <%# Users per page %>
+      <div class='ms-3'>
+        <div id='sort-per-page' class='dropdown text-nowrap mb-3'>
+          <%= link_to t('.per_page', count: per_page), '#',
+                      data: { 'bs-toggle': 'dropdown' }, aria: { expanded: false },
+                      class: 'btn btn-primary dropdown-toggle' %>
+          <ul class='dropdown-menu' aria-labelledby='per-page'>
+            <% [10, 20, 50, 100].each do |count| %>
+              <li>
+              <%= link_to t('.per_page', count: count),
+                          chaltron_users_path(users_ssfp_params.merge(per_page: count, page: nil)),
+                          class: class_names('dropdown-item', { active: per_page == count }) %>
+              </li>
+            <% end %>
+          </ul>
         </div>
       </div>
-      <% end %>
-      <%# Inactivity filter %>
-      <div class='card mb-3'>
-        <div class='card-header'>
-          <%= t('.inactivity_filter') %>
-        </div>
-        <div class='list-group list-group-flush'>
-          <%= display_side_filter_link(request.params.merge(activity: 'no_login', page: nil),
-                                       filter_activity == 'no_login', t('.no_login'), @count_users_inactive) %>
-        </div>
-      </div>
-      <%# Reset filters %>
-      <%= link_to t('.reset_filters'), request.params.merge(provider: nil, activity: nil),
-                  class: 'btn btn-primary w-100 mb-3' %>
-    </div>
-    <div class='col-md-9'>
-      <div class='d-flex'>
-        <%# Search form %>
-        <div class='flex-grow-1'>
-          <%= form_tag chaltron_users_path, method: 'get', class: 'mb-3' do %>
-            <%= hidden_field_tag :sort_direction, sort_direction %>
-            <%= hidden_field_tag :sort_column, sort_column %>
-            <div class='input-group'>
-              <%= text_field_tag :search, filter_search,
-                                 class: 'form-control', placeholder: t('.search') %>
-              <button class='btn btn-primary' type='submit'>Cerca</button>
-            </div>
-          <% end %>
-        </div>
-        <%# Users per page %>
-        <div class='ms-3'>
-          <div id='sort-per-page' class='dropdown text-nowrap mb-3'>
-            <%= link_to t('.per_page', count: per_page), '#',
-                        data: { 'bs-toggle': 'dropdown' }, aria: { expanded: false },
-                        class: 'btn btn-primary dropdown-toggle' %>
-            <ul class='dropdown-menu' aria-labelledby='per-page'>
-              <% [10, 20, 50, 100].each do |count| %>
-                <li>
-                <%= link_to t('.per_page', count: count),
-                            request.params.merge(per_page: count, page: nil),
-                            class: class_names('dropdown-item', { active: per_page == count }) %>
-                </li>
+      <%# Sort columns %>
+      <div class='ms-3'>
+        <div id='sort' class='btn-group mb-3 float-end' role='group'>
+          <div class='btn-group' role='group'>
+            <button id='sort-column' type='button' class='btn btn-primary dropdown-toggle' data-bs-toggle='dropdown' aria-expanded='false'>
+              <%= t('.sorted_by') %> <%= Chaltron::User.human_attribute_name(sort_column).downcase %>
+            </button>
+            <ul class='dropdown-menu' aria-labelledby='sort-column'>
+              <% %w[username email created_at sign_in_count].each do |field| %>
+              <li>
+                <%= link_to chaltron_users_path(users_ssfp_params.merge(sort_column: field, page: nil)),
+                            class: class_names('dropdown-item', { active: sort_column == field }) do %>
+                    <%= t('.sorted_by') %> <%= Chaltron::User.human_attribute_name(field).downcase %>
+                <% end %>
+              </li>
               <% end %>
             </ul>
           </div>
-        </div>
-        <%# Sort columns %>
-        <div class='ms-3'>
-          <div id='sort' class='btn-group mb-3 float-end' role='group'>
-            <div class='btn-group' role='group'>
-              <button id='sort-column' type='button' class='btn btn-primary dropdown-toggle' data-bs-toggle='dropdown' aria-expanded='false'>
-                <%= t('.sorted_by') %> <%= Chaltron::User.human_attribute_name(sort_column).downcase %>
-              </button>
-              <ul class='dropdown-menu' aria-labelledby='sort-column'>
-                <% %w[username email created_at sign_in_count].each do |field| %>
-                <li>
-                  <%= link_to request.params.merge(sort_column: field, page: nil),
-                              class: class_names('dropdown-item', { active: sort_column == field }) do %>
-                      <%= t('.sorted_by') %> <%= Chaltron::User.human_attribute_name(field).downcase %>
-                  <% end %>
-                </li>
-                <% end %>
-              </ul>
-            </div>
-            <%= link_to(request.params.merge(sort_direction: (sort_direction == 'asc' ? 'desc' : 'asc'), page: nil),
-                        class: 'btn btn-outline-primary') do %>
-              <%= icon :fas, sort_direction == 'desc' ? 'sort-alpha-up' : 'sort-alpha-down' %>
-            <% end %>
-          </div>
+          <%= link_to(chaltron_users_path(users_ssfp_params.merge(sort_direction: (sort_direction == 'asc' ? 'desc' : 'asc'), page: nil)),
+                      class: 'btn btn-outline-primary') do %>
+            <%= icon :fas, sort_direction == 'desc' ? 'sort-alpha-up' : 'sort-alpha-down' %>
+          <% end %>
         </div>
       </div>
+    </div>
 
-      <%= render partial: 'user', collection: users %>
+    <%= render partial: 'user', collection: users %>
 
-      <div class='mt-3'>
-        <%== pagy_info(pagy) %>
-        <div class='float-end'>
-          <%== pagy_bootstrap_nav(pagy) %>
-        </div>
+    <div class='mt-3'>
+      <%== pagy_info(pagy) %>
+      <div class='float-end'>
+        <%== pagy_bootstrap_nav(pagy) %>
       </div>
     </div>
   </div>
