--- a/templates/app/views/chaltron/users/index.html.erb
+++ b/templates/app/views/chaltron/users/index.html.erb
@@ -29,5 +29,5 @@
   </div>
 </div>
 <%= turbo_frame_tag 'chaltron_users' do %>
-  <%= render partial: 'users', locals: { users: @users, pagy: @pagy } %>
+  <%= render partial: 'users', locals: { users: @users, pagy: @pagy, count_filters: @count_filters } %>
 <% end %>
