--- a/templates/app/views/shared/_flash.html.erb
+++ b/templates/app/views/shared/_flash.html.erb
@@ -1,9 +1,9 @@
 <% flash.each do |type, message| %>
-  <%= tag.div message, class: "alert #{bootstrap_class_for(type)} rounded-0",
-                       data: {
-                         controller: 'chaltron--remove',
-                         action: 'click->chaltron--remove#remove'
-                       } do %>
+  <%= tag.div class: "alert #{bootstrap_class_for(type)} rounded-0",
+              data: {
+                controller: 'chaltron--remove',
+                action: 'click->chaltron--remove#remove'
+              } do %>
     <% label = I18n.t("chaltron.flash.#{type}") %>
     <%= tag.strong "#{label}: " %><%= tag.span message %>
   <% end %>
