fix missing list-group class in users/logs#index page

--- a/templates/app/views/chaltron/users/_users.html.erb
+++ b/templates/app/views/chaltron/users/_users.html.erb
@@ -70,8 +70,9 @@
       </div>
     </div>
 
-    <%= render partial: 'user', collection: users %>
-
+    <div class='list-group'>
+      <%= render partial: 'user', collection: users %>
+    </div>
     <div class='mt-3'>
       <%== pagy_info(pagy) %>
       <div class='float-end'>
