--- a/templates/app/views/shared/_flash.html.erb
+++ b/templates/app/views/shared/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |type, message| %>
-  <%= tag.div class: "alert #{bootstrap_class_for(type)} rounded-0",
+  <%= tag.div class: "alert #{bootstrap_class_for(type)} rounded-0 m-0",
               data: {
                 controller: 'chaltron--remove',
                 action: 'click->chaltron--remove#remove'
