--- a/templates/app/views/shared/_navbar.html.erb
+++ b/templates/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav id='navbar-top' class='navbar navbar-expand-lg navbar-dark bg-dark'>
+<nav id='navbar-top' class='navbar navbar-expand-lg navbar-dark bg-dark py-0'>
   <div class='container-fluid mx-auto'>
     <%= link_to 'Home page', root_path, class: 'navbar-brand' %>
     <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent'
