--- a/templates/app/views/chaltron/users/destroy.turbo_stream.erb
+++ b/templates/app/views/chaltron/users/destroy.turbo_stream.erb
@@ -1,6 +1,7 @@
 <% if current_user != @user %>
-  <%= turbo_stream.update 'chaltron_users' do %>
-    <%= render partial: 'users', locals: { users: @users, pagy: @pagy, count_filters: @count_filters } %>
+  <%= turbo_stream.remove dom_id(@user) %>
+  <%= turbo_stream.update 'filters' do %>
+    <%= render 'filters', count_filters: @count_filters %>
   <% end %>
 <% end %>
 <%= render_turbo_stream_flash_messages %>
