--- a/templates/app/views/shared/_footer.html.erb
+++ b/templates/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class='container-fluid'>
     <%= tag.div class: 'navbar-text' do %>
       <%= icon(:fab, :github) %>
-      Created with
+      Crafted with love and
       <%= link_to 'chaltron', 'https://github.com/vicvega/chaltron-template', class: 'navbar-link' %>
     <% end %>
     <%= tag.div(revision, class: 'navbar-text') unless revision.nil? %>
