--- a/templates/app/views/shared/chaltron/_sort.html.erb
+++ b/templates/app/views/shared/chaltron/_sort.html.erb
@@ -14,9 +14,11 @@
         <% end %>
       </ul>
     </div>
-    <%= link_to(url.merge(
-                  request.params.merge(sort_direction: (sort_direction == 'asc' ? 'desc' : 'asc'),
-                                        page: nil)), class: 'btn btn-outline-primary') do %>
+    <%= link_to(
+          url.merge(
+            request.params.merge(sort_direction: (sort_direction == 'asc' ? 'desc' : 'asc'), page: nil)
+          ), class: 'btn btn-outline-primary'
+        ) do %>
       <%= icon :fas, sort_direction == 'desc' ? 'sort-alpha-up' : 'sort-alpha-down' %>
     <% end %>
   </div>
