--- a/templates/app/views/chaltron/users/_filters.html.erb
+++ b/templates/app/views/chaltron/users/_filters.html.erb
@@ -1,8 +1,5 @@
 <h4><%= t('.filters') %></h4>
 <%= simple_form_for filter, as: :filter, url: chaltron_users_path, method: 'get' do |f| %>
-  <%= hidden_field_tag 'sort_direction', sort_direction %>
-  <%= hidden_field_tag 'sort_column', sort_column %>
-  <%= hidden_field_tag 'per_page', per_page %>
   <%= f.hidden_field(:search) %>
   <% labels = providers.to_a.map do |x|
        "#{t("chaltron.users.provider.#{x.first}")} (#{number_with_delimiter(x.last, delimiter: '.')})"
@@ -16,7 +13,6 @@
 <hr>
 <%# Reset filters %>
 <%= link_to t('.reset_filters'),
-            chaltron_users_path(
-              request.params.deep_merge(filter: { providers: [], never_logged_in: false }, page: nil)
-            ),
+            { controller: 'chaltron/users', action: 'index',
+              filter: @filter.attributes.merge('providers' => [], 'never_logged_in' => false), page: nil  },
             class: 'btn btn-primary w-100 mb-3' %>
